--- a/MicroBlog.Web/css/bloglist.css
+++ b/MicroBlog.Web/css/bloglist.css
@@ -14,3 +14,10 @@
 a {
     color: #000000;
 }
+
+.editor {
+    min-height: 300px;
+    padding: 20px;
+    margin-bottom: 20px;
+    border: 1px solid darkblue;
+}
