some layout changes, a view page.

--- a/MicroBlog.Web/css/bloglist.css
+++ b/MicroBlog.Web/css/bloglist.css
@@ -3,13 +3,31 @@
 }
 
 .row {
-    margin-bottom: 50px;
+    margin: 10px;
+    padding: 10px;
+    background-color: lightgrey;
+    -moz-box-shadow: 0px 0px 5px rgba(0,0,0,.5);
+    -webkit-box-shadow: 0px 0px 5px rgba(0,0,0,.5);
+    box-shadow: 0px 0px 5px rgba(0,0,0,.5);
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px; 
 }
 
 .blogheader {
+    background-color: darkgray;
+    -moz-box-shadow: 0px 0px 5px rgba(0,0,0,.5);
+    -webkit-box-shadow: 0px 0px 5px rgba(0,0,0,.5);
+    box-shadow: 0px 0px 5px rgba(0,0,0,.5);
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px; 
+}
+
+/*.blogheader {
     font-weight: bold;
     font-size: large;
-}
+}*/
 
 a {
     color: #000000;
